tests/errors/continue_outside_loop.rsg
// TEST: compile_error
// EXPECT-ERROR: 'continue' outside of loop
module test_err

fn main() {
    continue
}
